Draft: Developer Fundamentals update

--- a/site/guide/model-documentation/check-documentation-for-compliance.qmd
+++ b/site/guide/model-documentation/check-documentation-for-compliance.qmd
@@ -54,48 +54,7 @@ By default, {{< var vm.product >}} supports the following regulations:
 
 ## Check model documentation
 
-1. In the left sidebar, click **{{< fa cubes >}} Inventory**.
-
-2. Select a model or find your model by applying a filter or searching for it.[^7]
-
-3. In the left sidebar that appears for your model, click **{{< fa file >}} Documents** and select a Document type file.[^8].
-
-4. Locate the {{< var vm.checker >}} box on the right and click **{{< fa check >}} Check Document**.
-
-### Select a regulation
-
-1. In the {{< var vm.checker >}} modal, select a **[regulation]{.smallcaps}** and an associated **[assessment]{.smallcaps}** from the drop-down menus to to check your document against:
-
-   ![Example **[regulation or policy]{.smallcaps}** and **[assessment]{.smallcaps}** selected to check a document against](/guide/model-documentation/vdv-selection.png){fig-alt="A screenshot showing the REGULATION OR POLICY and ASSESSMENT dropdowns in the Document Checker" .screenshot}
-
-   A list of regulation-based questions appears for your review.
-
-2. Scroll to the bottom and click **Check Document**.
-
-The {{< var validmind.checker >}} analyzes your documentation, identifies gaps, and generates recommendations for specific questions that you review in the next step.
-
-### Review the observations
-
-1. After the {{< var vm.checker >}} has completed its analysis, expand individual questions or click **Expand All** to look through the observations:
-
-::: {.pl4}
-[Gap Identified]{.bubble .red-b .red-bg} — A question that is not addressed and requires attention.<br>
-[Partial Gap]{.bubble .yellow-bg} — A question that is partially addressed and requires attention.<br>
-[No Significant Gaps]{.bubble .green-bg} — A question that is fully addressed.
-:::
-
-2. Review questions that require attention. Each question includes:
-
-     - **Observation** — An analysis of how the documentation currently addresses the question
-     - **Recommendation** — If suggested, guidance on how to revise the documentation to better address the question
-
-   ![Sample question that is not addressed](/guide/model-documentation/vdv-gap-identified.png){fig-alt="A screenshot showing the question 'Is the documentation sufficient to allow an expert to adjust parameters?' and the observation 'Gap identified' with a recommendation to add a policy paragraph." .screenshot}
-
-   ![Sample question that is partially addressed](/guide/model-documentation/vdv-partial-gap.png){fig-alt="A screenshot showing the question 'Is the documentation sufficient to allow an expert to adjust parameters?' and the observation 'Gap identified' with a recommendation to add a policy paragraph." .screenshot}
-
-   ![Sample question that is fully addressed](/guide/model-documentation/vdv-no-significant-gaps.png){fig-alt="A screenshot showing the question 'Is the documentation sufficient to allow an expert to adjust parameters?' and the observation 'No significant gaps.' with a recommendation to add a policy paragraph." .screenshot}
-
-Use the feedback provided by the {{< var validmind.checker >}} to review the appropriate sections of your documentation and decide what revisions should be made. Or, if you have run the {{< var vm.checker >}} before and were just checking that all documentation issues have been addressed, submit your model for validation.
+{{< include /guide/model-documentation/_check-model-documentation.qmd >}}
 
 ## Learn more
 
@@ -115,6 +74,4 @@ Use the feedback provided by the {{< var validmind.checker >}} to review the app
 
 [^6]: [Manage permissions](/guide/configuration/manage-permissions.qmd)
 
-[^7]: [Working with the model inventory](/guide/model-inventory/working-with-model-inventory.qmd#search-filter-and-sort-models)
 
-[^8]: [Working with model documents](/guide/templates/working-with-model-documents.qmd)
