--- a/site/training/developer-fundamentals/finalizing-model-documentation.qmd
+++ b/site/training/developer-fundamentals/finalizing-model-documentation.qmd
@@ -215,6 +215,51 @@ When you're done, click [{{< fa chevron-right >}}]() to continue.
 
 ::::
 
+{{< include /training/common-slides/_document-checker.qmd >}}
+
+<br>
+Learn how to **use the {{< var vm.checker >}} to review model documentation** on the next page. {{< fa hand-point-right >}}
+
+## {.scrollable}
+
+:::: {.columns}
+::: {.column width="30%" .pr4 .f2}
+Use the {{< var vm.checker >}}
+
+::: {.f5 .nt2 .pl2 .mb4}
+(Scroll down for the full instructions.)
+:::
+
+
+<br>Try it **live** on the next page. {{< fa hand-point-right >}}
+:::
+
+::: {.column width="70%" .bl .pl4 .f4}
+
+{{< include /guide/model-documentation/_check-model-documentation.qmd >}}
+
+:::
+
+::::
+
+## {background-iframe="https://app.prod.validmind.ai/model-inventory" background-interactive="true" data-preload="yes"}
+
+:::: {.slideover--b .auto-collapse-10}
+::: {.tc}
+**Check your model documentation**
+:::
+
+1. Select the name of your model you registered for this course to open up the model details page.
+2. On the left sidebar that appears for your model, click **Documentation** under {{< fa file >}} Documents.
+3. Locate the {{< var vm.checker >}} box on the right and click **{{< fa check >}} Check Document**.
+4. Select a **[regulation]{.smallcaps}** and an associated **[assessment]{.smallcaps}** from the drop-down menus to to check your document against.
+5. Scroll to the bottom and click **Check Document**.
+6. After the {{< var vm.checker >}} has completed its analysis, expand individual questions or click **Expand All** to look through the observations.
+
+When you're done, click [{{< fa chevron-right >}}]() to continue.
+
+::::
+
 # Submit documentation for approval {background-color="#083E44" background-image="/training/assets/home-hero.svg"}
 
 {{< include /training/common-slides/_work-with-workflows.qmd >}}
