docs & training: Virtual Document Validator, regulations & policies set up update (#973)
* Draft: Questions from PDF uploads

* Training: Setup for regulations & policies

* Save point

* Save point

* Draft: Administrator Fundamentals update

* Draft: Developer Fundamentals update

* Proofreading

--- a/site/training/administrator-fundamentals/using-validmind-for-model-risk-management.qmd
+++ b/site/training/administrator-fundamentals/using-validmind-for-model-risk-management.qmd
@@ -30,7 +30,10 @@ skip_preview: true
 
 # Learning objectives {.center}
 
-_"As an **administrator** who has set up user access to the {{< var validmind.platform >}} and prepared our model inventory for tracking models, I want to maximize the potential of {{< var vm.product >}} as a centralized hub for risk management oversight by configuring workflows and attestations in accordance with our organization's requirements."_
+::: {.f2}
+_"As an **administrator** who has set up user access to the {{< var validmind.platform >}} and prepared our model inventory for tracking models, I want to maximize the potential of {{< var vm.product >}} as a centralized hub for risk management oversight by configuring workflows, regulations and policies, and attestations in accordance with our organization's requirements."_
+
+:::
 
 ::: {.tc}
 <br>
@@ -44,8 +47,8 @@ This third module is part of a four-part series:
 
 ::: {.f2}
 1. [{{< var vm.product >}} for model risk management](#validmind-for-model-risk-management)
-2. [Set up custom workflows](#set-up-workflows)
-3. [Manage model workflows](#manage-model-workflows)
+2. [Set up & manage custom workflows](#set-up-manage-workflows)
+3. [Manage regulations & policies](#manage-regulations-policies)
 4. [Configure attestations](#configure-attestations)
 
 :::
@@ -115,7 +118,7 @@ Let's continue our journey by learning how to **set up workflows** for your use 
 
 ::::
 
-# Set up workflows {background-color="#083E44" background-image="/training/assets/home-hero.svg"}
+# Set up & manage workflows {background-color="#083E44" background-image="/training/assets/home-hero.svg"}
 
 ## {.scrollable}
 
@@ -295,8 +298,6 @@ When you're done, click [{{< fa chevron-right >}}]() to continue.
 
 ::::
 
-# Manage model workflows {background-color="#083E44" background-image="/training/assets/home-hero.svg"}
-
 ## {.scrollable .center}
 
 :::: {.columns}
@@ -394,6 +395,141 @@ As an administrator, you may need to reset or abort model workflows as required:
 When you're done, click [{{< fa chevron-right >}}]() to continue.
 
 ::::
+
+# Manage regulations & policies {background-color="#083E44" background-image="/training/assets/home-hero.svg"}
+
+{{< include /training/common-slides/_document-checker.qmd >}}
+
+<br>
+Learn how to **customize the regulations and policies available to the {{< var vm.checker >}}** on the next pages. {{< fa hand-point-right >}}
+
+## {.scrollable .center}
+
+:::: {.columns}
+::: {.column width="30%" .pr4 .f2}
+Add regulations & policies
+
+::: {.f5 .nt2 .pl2 .mb4}
+(Scroll down for the full instructions.)
+:::
+
+::: {.tc}
+[Learn more ...](/guide/templates/customize-virtual-document-validator.qmd#manage-regulations-and-policies){.button target="_blank"}
+:::
+
+<br>Try it **live** on the next page. {{< fa hand-point-right >}}
+
+:::
+
+::: {.column width="70%" .bl .pl4 .f3}
+
+{{< include /guide/templates/_regulations-policies.qmd >}}
+
+1. In the left sidebar, click **{{< fa gear >}} Settings**.
+
+2. Under Workspace, select **Regulations & Policies**.
+
+{{< include /guide/templates/_add-regulations-policies.qmd >}}
+
+:::
+::::
+
+## {background-iframe="https://app.prod.validmind.ai/settings/regulations" background-interactive="true" data-preload="yes"}
+
+:::: {.slideover--b .three-quarters .auto-collapse-10}
+::: {.tc}
+**Add a regulation or policy**
+:::
+
+1. Click **{{< fa plus >}} Add** to create a new regulation or policy.
+2.  Provide a **[regulation or policy name]{.smallcaps}** and an optional **[description]{.smallcaps}**.
+3. Click **Add** to create your regulation or policy.
+
+When you're done, click [{{< fa chevron-right >}}]() to continue.
+
+::::
+
+## {.scrollable .center}
+
+:::: {.columns}
+::: {.column width="30%" .pr4 .f2}
+Add assessments
+
+::: {.tc}
+[Learn more ...](/guide/templates/customize-virtual-document-validator.qmd#add-or-clone-assessments){.button target="_blank"}
+:::
+
+<br>Try it **live** on the next page. {{< fa hand-point-right >}}
+
+:::
+
+::: {.column width="70%" .bl .pl4 .f3}
+
+{{< include /guide/templates/_assessments.qmd >}}
+
+1. In the left sidebar, click **{{< fa gear >}} Settings**.
+
+2. Under Workspace, select **Regulations & Policies**.
+
+3. Select the regulation or policy you want to add an assessment for by clicking on it.
+
+{{< include /guide/templates/_add-assessments.qmd >}}
+
+:::
+::::
+
+## {background-iframe="https://app.prod.validmind.ai/settings/regulations" background-interactive="true" data-preload="yes"}
+
+:::: {.slideover--b .three-quarters .auto-collapse-10}
+::: {.tc}
+**Add an assessment**
+:::
+
+1. Select the regulation or policy you added in the previous step by clicking on it.
+2. Click **{{< fa plus >}} Add** to create a new assessment.
+3.  Provide an **[assessment name]{.smallcaps}** and an optional **[description]{.smallcaps}**.
+6. Click **Add** to create your assessment.
+
+When you're done, click [{{< fa chevron-right >}}]() to continue.
+
+::::
+
+## {.scrollable .center}
+
+:::: {.columns}
+::: {.column width="30%" .pr4 .f2}
+Add assessment questions
+
+::: {.tc}
+[Learn more ...](/guide/templates/customize-virtual-document-validator.qmd#add-or-edit-assessment-questions){.button target="_blank"}
+:::
+
+<br>Try it **live** on the next page. {{< fa hand-point-right >}}
+
+:::
+
+::: {.column width="70%" .bl .pl4 .f3}
+
+{{< include /guide/templates/_add-assessment-questions.qmd >}}
+:::
+::::
+
+## {background-iframe="https://app.prod.validmind.ai/settings/regulations" background-interactive="true" data-preload="yes"}
+
+:::: {.slideover--b .three-quarters .auto-collapse-10}
+::: {.tc}
+**Add an assessment question**
+:::
+
+1. Select the assessment you want to add questions to by clicking on it.
+2. Click **{{< fa plus >}} Add Question(s)** to create a new question.
+3. Enter in the **[questions]{.smallcaps}**.
+4. Click **Add # Question(s)** to insert questions into the assessment.
+
+When you're done, click [{{< fa chevron-right >}}]() to continue.
+
+::::
+
 
 # Configure attestations {background-color="#083E44" background-image="/training/assets/home-hero.svg"}
 
