--- a/site/training/program/learning-paths.qmd
+++ b/site/training/program/learning-paths.qmd
@@ -180,8 +180,8 @@ Learn how to use {{< var vm.product >}} as an **administrator** to onboard your 
 
 ::: {.w-50-ns}
 #### <sup>Module 3</sup><br> Using {{< var vm.product >}} for Model Risk Management
-- Set up custom workflows
-- Manage workflows on models
+- Set up and manage custom workflows
+- Manage regulations and policies
 - Set up attestations
 
 :::
