--- a/site/guide/templates/customize-virtual-document-validator.qmd
+++ b/site/guide/templates/customize-virtual-document-validator.qmd
@@ -30,7 +30,7 @@ Manage the regulations and policies and their attached assessments available whe
 Default regulations provided by {{< var vm.product >}} cannot be edited.[^2]
 :::
 
-Regulations or policies contain assessments, a set of questions against which your document is checked.
+{{< include /guide/templates/_regulations-policies.qmd >}}
 
 1. In the left sidebar, click **{{< fa gear >}} Settings**.
 
@@ -42,16 +42,7 @@ Regulations or policies contain assessments, a set of questions against which yo
 
 #### Add regulations or policies
 
-a. Click **{{< fa plus >}} Add** to create a new regulation or policy.
-
-b.  Provide the details for your regulation or policy:
-
-    - **[regulation or policy name]{.smallcaps}**
-    - (Optional) **[description]{.smallcaps}**
-
-c. Click **Add** to create your regulation or policy.
-
-d. Once created, manage your regulation or policy assessments.[^3]
+{{< include /guide/templates/_add-regulations-policies.qmd >}}
 
 #### Edit regulations or policies
 
@@ -74,7 +65,7 @@ c. Click **Update Regulation or Policy** to save your edits.
 Cloned assessments can then be edited.
 :::
 
-Regulations and policies can contain multiple assessments. Assessments are composed of questions against which your document is checked.
+{{< include /guide/templates/_assessments.qmd >}}
 
 To manage an assessment:
 
@@ -93,18 +84,9 @@ To manage an assessment:
 
 ::: {.panel-tabset}
 
-#### Add asssessments
+#### Add assessments
 
-a. Click **{{< fa plus >}} Add** to create a new assessmemt.
-
-b.  Provide the details for your assessment:
-
-    - **[assessment name]{.smallcaps}**
-    - (Optional) **[description]{.smallcaps}**
-
-c. Click **Add** to create your assessment.
-
-d. Once created, add or edit the assessment questions.[^4]
+{{< include /guide/templates/_add-assessments.qmd >}}
 
 #### Clone assessments
 
@@ -117,7 +99,7 @@ b. When the **{{< fa ellipsis-vertical >}}** appears, click on it and select **{
 
 c. Click **Clone Assessment** to save a copy of the assessment.
 
-d. Once cloned, add or edit the assessment questions.[^5]
+d. Once cloned, add or edit the assessment questions.[^3]
 
 :::
 
@@ -136,21 +118,11 @@ d. Once cloned, add or edit the assessment questions.[^5]
 
 ::: {.panel-tabset}
 
-#### Add asssessment questions
+### Add assessment questions
 
-a. Click **{{< fa plus >}} Add Question(s)** to create a new question.
+{{< include /guide/templates/_add-assessment-questions.qmd >}}
 
-b. Enter in the **[questions]{.smallcaps}**:
-
-    - Each line without a break (enter) is considered one complete question.[^6]
-    - To add a separate question, press enter to start a new line.
-    - Questions will be added in the order they appear.
-
-    As you enter questions, the count of questions will update.
-
-c. Click **Add # Question(s)** to insert questions into the assessment.
-
-#### Edit assessment questions
+### Edit assessment questions
 
 ::: {.callout title="How do I locate a specific question?"}
 Click **{{<fa magnifying-glass >}} Search** to enter in your keywords, then press **Search** to narrow down results.
@@ -175,11 +147,7 @@ c. Click **Update Question** to save your changes.
 
 [^2]: [Check documentation for compliance](/guide/model-documentation/check-documentation-for-compliance.qmd#what-is-the)
 
-[^3]: [Manage assessments](#manage-assessments)
+[^3]: [Add or edit assessment questions](#add-or-edit-assessment-questions)
 
-[^4]: [Add or edit assessment questions](#add-or-edit-assessment-questions)
 
-[^5]: [Add or edit assessment questions](#add-or-edit-assessment-questions)
-
-[^6]: Empty lines will be ignored.
 
