Reorder all releases page, bump up length of descriptions shown

--- a/site/releases/validmind-library-releases.qmd
+++ b/site/releases/validmind-library-releases.qmd
@@ -5,6 +5,7 @@ date: "October 3, 2025"
 listing:
   contents: ../releases/validmind-library/**/pr-*.qmd
   fields: [date, title, categories, description]
+  max-description-length: 500
   sort: "date desc"
   type: default
   categories: true
