Turn older releases into collapsible section

--- a/site/releases/all-releases.qmd
+++ b/site/releases/all-releases.qmd
@@ -29,6 +29,7 @@ listing:
         categories: ["breaking changes", "deprecations", "releases by year"]
     contents:
         - ../releases/2025/**/*.qmd
+
 ---
 
 ## Current releases
@@ -36,7 +37,15 @@ listing:
 :::{#release-pages}
 :::
 
-## Previous releases
+::: {.callout-important collapse="true" appearance="minimal"}
+## Legacy release notes
+
+We introduced a new release notes format in April 2025 with better highlights and filtering:
+
+- Release notes up to version `25.03` are in this section. 
+- Release notes from version `25.04` and later are under "Current releases".
 
 :::{#releases}
+:::
+
 :::
