--- a/site/releases/all-releases.qmd
+++ b/site/releases/all-releases.qmd
@@ -29,13 +29,36 @@ listing:
         categories: ["breaking changes", "deprecations", "releases by year"]
     contents:
         - ../releases/2025/**/*.qmd
-
+  -id: feature-highlights
+    type: table
+    page-size: 5
+    table-hover: true
+    include:
+      categories: highlight
+    sort: "date desc"
+    date-format: iso
+    max-description-length: 300
+    categories: false
+    sort-ui: false
+    filter-ui: false
+    fields: [date, title]
+    contents:
+      - ../releases/frontend/**/pr*.qmd
+      - ../releases/documentation/**/pr*.qmd
+      - ../releases/validmind-library/**/pr*.qmd
 ---
 
 ## Current releases
 
 :::{#release-pages}
 :::
+
+
+## Feature highlights
+
+:::{#feature-highlights}
+:::
+
 
 ::: {.callout-important collapse="true" appearance="minimal"}
 ## Legacy release notes
