Add button for all feature highlights & add whitespace

--- a/site/releases/all-releases.qmd
+++ b/site/releases/all-releases.qmd
@@ -36,7 +36,6 @@ listing:
     include:
       categories: highlight
     sort: "date desc"
-    date-format: iso
     max-description-length: 300
     categories: false
     sort-ui: false
@@ -53,15 +52,16 @@ listing:
 :::{#release-pages}
 :::
 
-
 ## Feature highlights
 
 :::{#feature-highlights}
 :::
 
+[View all feature highlights](/releases/highlights.qmd){.button}
 
+::: {.pt4}
 ::: {.callout-important collapse="true" appearance="minimal"}
-## Legacy release notes
+## Old release notes
 
 We introduced a new release notes format in April 2025 with better highlights and filtering:
 
@@ -71,4 +71,5 @@ We introduced a new release notes format in April 2025 with better highlights an
 :::{#releases}
 :::
 
+:::
 :::
