--- a/site/releases/all-releases.qmd
+++ b/site/releases/all-releases.qmd
@@ -31,7 +31,7 @@ listing:
         - ../releases/2025/**/*.qmd
   - id: feature-highlights
     type: table
-    page-size: 5
+    page-size: 10
     table-hover: true
     include:
       categories: highlight
@@ -61,7 +61,7 @@ listing:
 
 ::: {.pt4}
 ::: {.callout-important collapse="true" appearance="minimal"}
-## Old release notes
+## Older release notes
 
 We introduced a new release notes format in April 2025 with better highlights and filtering:
 
