Fix broken links

--- a/site/developer/model-testing/testing-overview.qmd
+++ b/site/developer/model-testing/testing-overview.qmd
@@ -53,9 +53,9 @@ listing:
     contents: 
     - ../../notebooks/code_samples/custom_tests/implement_custom_tests.ipynb
     - ../../notebooks/code_samples/custom_tests/integrate_external_test_providers.ipynb
-    - path: /notebooks/how_to/add_context_to_llm_descriptions.ipynb
-      title: "Add context to LLM-generated test descriptions"
-      description: "Learn how to add custom use case and test-specific context to your LLM-generated test descriptions."
+    - path: /notebooks/how_to/customize_test_result_descriptions.ipynb
+      title: "Customize test result descriptions"
+      description: "Learn how to take control over the context that drives test description generation."
 ---
 
 {{< var vm.product >}} provides many built-in tests and test suites, which help you produce documentation during stages of the model development lifecycle where you need to validate that your work satisfies MRM (model risk management) requirements.
