--- a/site/releases/2025/2025-jan-31/release-notes.qmd
+++ b/site/releases/2025/2025-jan-31/release-notes.qmd
@@ -9,9 +9,9 @@ listing:
     max-description-length: 250
     # image-height: 100%
     contents:
-      - path: /notebooks/how_to/add_context_to_llm_descriptions.ipynb
-        title: "Add context to LLM-generated test descriptions"
-        description: "Learn how to add custom context to LLM-generated test descriptions {{< fa chevron-right >}}"
+      - path: /notebooks/how_to/customize_test_result_descriptions.ipynb
+        title: "Customize test result descriptions"
+        description: "Learn how to take control over the context that drives test description generation. {{< fa chevron-right >}}"
   - id: credit-risk
     type: grid
     grid-columns: 1
