--- a/site/faq/faq-testing.qmd
+++ b/site/faq/faq-testing.qmd
@@ -102,7 +102,7 @@ Check our our introductory series — [**{{< var vm.product >}} for model valida
 
 [^7]: [Understand and utilize `RawData` in {{< var vm.product >}} tests](/notebooks/how_to/understand_utilize_rawdata.ipynb)
 
-[^8]: [Add context to LLM-generated test descriptions](/notebooks/how_to/add_context_to_llm_descriptions.ipynb)
+[^8]: [Customize test result descriptions](/notebooks/how_to/customize_test_result_descriptions.ipynb)
 
 [^9]: [Work with test results](/guide/model-documentation/work-with-test-results.qmd)
 
