Address Beck's sidebar suggestion

--- a/site/releases/all-releases.qmd
+++ b/site/releases/all-releases.qmd
@@ -61,7 +61,7 @@ listing:
 
 ::: {.pt4}
 ::: {.callout-important collapse="true" appearance="minimal"}
-## Older release notes
+## Older releases
 
 We introduced a new release notes format in April 2025 with better highlights and filtering:
 
