Hiding PDF upload for VDV

--- a/site/guide/templates/_add-assessment-questions.qmd
+++ b/site/guide/templates/_add-assessment-questions.qmd
@@ -1,8 +1,22 @@
-Manually add assessment questions, or generate questions from a PDF upload:
+<!-- PDF UPLOAD IS CURRENTLY HIDDEN BEHIND A FEATURE FLAG -->
+
+<!-- Manually add assessment questions, or generate questions from a PDF upload: -->
 
 :::: {.content-visible unless-format="revealjs"}
 
-#### Manually add questions
+a. Click **{{< fa plus >}} Add Question(s)** to create a new question.
+
+a. Enter in the **[questions]{.smallcaps}**:
+
+    - Each line without a break (enter) is considered one complete question.^[Empty lines will be ignored.]
+    - To add a separate question, press enter to start a new line.
+    - Questions will be added in the order they appear.
+
+    As you enter questions, the count of questions will update.
+
+a. Click **Add # Question(s)** to insert questions into the assessment.
+
+<!-- #### Manually add questions
 
 a. Click **{{< fa plus >}} Add Question(s)** to create a new question.
 
@@ -28,7 +42,7 @@ a. On the Upload Document modal, drag and drop a PDF into the upload box, or cli
 
 a. Click **Upload Document** to automatically generate questions based on your PDF upload.
 
-a. After questions are generated, review and edit them to ensure that they adhere to your upload's requirements.
+a. After questions are generated, review and edit them to ensure that they adhere to your upload's requirements. -->
 
 ::::
 
