Edit: Remove info for add finding via doc section

--- a/site/guide/model-validation/_add-model-findings.qmd
+++ b/site/guide/model-validation/_add-model-findings.qmd
@@ -5,7 +5,21 @@
 
 1. In the left sidebar that appears for your model, click **{{< fa file >}} Documents** and select a Documentation type file.^[[Working with model documents](/guide/templates/working-with-model-documents.qmd)]
 
-    Either log a finding on this overview page, or via a specific documentation section. Both methods will allow you to associate a finding with a documentation section. 
+    <!-- Either log a finding on this overview page, or via a specific documentation section. Both methods will allow you to associate a finding with a documentation section.  -->
+
+1. On your model's Documentation page, click **{{< fa plus >}} Add Model Finding**.
+
+1. Select the finding type^[[Manage finding types](/guide/model-validation/manage-finding-types.qmd)] you want to add:
+
+   - Validation Issue
+   - Policy Exception
+   - Model Limitation
+
+1. On the Add Model Finding modal that opens, provide information for your finding.
+
+1. When you are done, click **Save** to submit the finding.
+
+   Once created, you can then add supporting documentation to your finding.^[[Manage supporting documentation](/guide/model-validation/add-manage-model-findings.qmd#manage-supporting-documentation)]
 
 ::::
 
@@ -16,7 +30,21 @@
 
 1. In the left sidebar that appears for your model, click **Documentation** under {{< fa file >}} Documents.
 
-    Either log a finding on this overview page, or via a specific documentation section. Both methods will allow you to associate a finding with a documentation section. 
+    <!-- Either log a finding on this overview page, or via a specific documentation section. Both methods will allow you to associate a finding with a documentation section.  -->
+
+1. On your model's Documentation page, click **{{< fa plus >}} Add Model Finding**.
+
+1. Select the [finding type](/guide/model-validation/manage-finding-types.qmd){target="_blank"} you want to add:
+
+   - Validation Issue
+   - Policy Exception
+   - Model Limitation
+
+1. On the Add Model Finding modal that opens, provide information for your finding.
+
+1. When you are done, click **Save** to submit the finding. 
+
+   Once created, you can then [add supporting documentation to your finding](/guide/model-validation/add-manage-model-findings.qmd#manage-supporting-documentation){target="_blank"}.
 
 ::::
 
