--- a/site/guide/model-validation/add-manage-model-findings.qmd
+++ b/site/guide/model-validation/add-manage-model-findings.qmd
@@ -23,7 +23,9 @@ Add findings at the model or documentation section level, update your findings t
 
 {{< include _add-model-findings.qmd >}}
 
-::: {.panel-tabset}
+<!-- ADD FINDINGS VIA SECTION CURRENTLY DISABLED, DOCS REMOVAL REQUESTED BY ANDRES -->
+
+<!-- ::: {.panel-tabset}
 
 #### Add findings via overview
 
@@ -33,7 +35,7 @@ Add findings at the model or documentation section level, update your findings t
 
 {{< include _add-finding-via-section.qmd >}}
 
-:::
+::: -->
 
 ## Add findings on validation reports
 
