--- a/site/training/validator-fundamentals/finalizing-validation-reports.qmd
+++ b/site/training/validator-fundamentals/finalizing-validation-reports.qmd
@@ -279,7 +279,7 @@ Along with adding findings directly via validation reports, you can also add fin
 
 {{< include /guide/model-validation/_add-model-findings.qmd >}}
 
-::: {.panel-tabset}
+<!-- ::: {.panel-tabset}
 
 ### Add finding via overview
 
@@ -289,7 +289,7 @@ Along with adding findings directly via validation reports, you can also add fin
 
 {{< include /guide/model-validation/_add-finding-via-section.qmd >}}
 
-:::
+::: -->
 
 :::
 ::::
@@ -298,7 +298,9 @@ Along with adding findings directly via validation reports, you can also add fin
 
 :::: {.slideover--b .auto-collapse-10}
 ::: {.tc}
-**Add a finding via overview**
+**Add a finding on documentation**
+
+<!-- **Add a finding via overview** -->
 :::
 
 1. Select the name of your model you registered for this course to open up the model details page.
@@ -309,7 +311,7 @@ When you're done, click [{{< fa chevron-right >}}]() to continue.
 
 :::
 
-## {background-iframe="https://app.prod.validmind.ai/model-inventory" background-interactive="true" data-preload="yes"}
+<!-- ## {background-iframe="https://app.prod.validmind.ai/model-inventory" background-interactive="true" data-preload="yes"}
 
 :::: {.slideover--b .auto-collapse-10}
 ::: {.tc}
@@ -322,7 +324,7 @@ When you're done, click [{{< fa chevron-right >}}]() to continue.
 
 When you're done, click [{{< fa chevron-right >}}]() to continue.
 
-:::
+::: -->
 
 ## {.scrollable}
 
