--- a/site/about/deployment/system-access-requirements.qmd
+++ b/site/about/deployment/system-access-requirements.qmd
@@ -7,17 +7,24 @@ Allow list the following domains in your organization’s firewall to ensure you
 
 ## ValidMind Library Python API access
 
+To use our documentation automation tools and test suites for model developers and validators:
+
 ```html
 *.validmind.ai
 ```
 
-## Public API access
+## Public REST API access
+
+To programmatically interact with the {{< var validmind.platform >}} platform:
+
 
 ```html
-*api.prod.validmind.ai/
+api.prod.validmind.ai/
 ```
 
 ## Web application access
+
+To access the {{< var validmind.platform >}} web application:
 
 ```html
 *.validmind.ai
