--- a/site/about/deployment/system-access-requirements.qmd
+++ b/site/about/deployment/system-access-requirements.qmd
@@ -17,14 +17,13 @@ To use our documentation automation tools and test suites for model developers a
 
 To programmatically interact with the {{< var validmind.platform >}} platform:
 
-
 ```html
-api.prod.validmind.ai/
+api.prod.validmind.ai
 ```
 
 ## Web application access
 
-To access the {{< var validmind.platform >}} web application:
+To access the {{< var validmind.platform >}} web application where you can work :
 
 ```html
 *.validmind.ai
