Fix incomplete sentence

--- a/site/about/deployment/system-access-requirements.qmd
+++ b/site/about/deployment/system-access-requirements.qmd
@@ -23,7 +23,7 @@ api.prod.validmind.ai
 
 ## Web application access
 
-To access the {{< var validmind.platform >}} web application where you can work :
+To access the {{< var validmind.platform >}} web application:
 
 ```html
 *.validmind.ai
