Edit: Approval step & condition instructions

--- a/site/guide/model-workflows/_conditional-requirements.qmd
+++ b/site/guide/model-workflows/_conditional-requirements.qmd
@@ -28,10 +28,14 @@ Configure conditional requirements for the following step types:^[[Workflow step
 
 #### {{< fa users >}} Approval
 
-- Select from either **User Roles**,^[[Manage roles](/guide/configuration/manage-roles.qmd)] **Model Stakeholder Types**,^[[Manage model stakeholder types](/guide/configuration/manage-model-stakeholder-types.qmd)] or either **User Role** or **User Type** inventory field^[[Manage model inventory fields](/guide/model-inventory/manage-model-inventory-fields.qmd#inventory-field-types)
-] for your **[approval group]{.smallcaps}**.
+1. Click **{{< fa plus >}} Add Rule** under [approval group]{.smallcaps} to set your `AND` conditions.^[One approver per rule must provide approval.]
 
-- Under **[threshold]{.smallcaps}**, set the minimum percentage of approvers required for the resource to be approved.
+    Select from either **User Roles**,^[[Manage roles](/guide/configuration/manage-roles.qmd)] **Model Stakeholder Types**,^[[Manage model stakeholder types](/guide/configuration/manage-model-stakeholder-types.qmd)] or **User Type** inventory field^[[Manage model inventory fields](/guide/model-inventory/manage-model-inventory-fields.qmd#inventory-field-types)
+    ] for your **[approval group]{.smallcaps}**.
+
+2. Select the **[fields to review]{.smallcaps}** shown to your [approval group]{.smallcaps}s as read-only fields.
+
+<!-- - Under **[threshold]{.smallcaps}**, set the minimum percentage of approvers required for the resource to be approved. -->
 
 #### {{< fa bullhorn >}} Broadcast
 
