--- a/site/guide/model-workflows/_workflow-step-types.qmd
+++ b/site/guide/model-workflows/_workflow-step-types.qmd
@@ -47,7 +47,7 @@ Display a preconfigured message to users in the selected **[approval group]{.sma
 | Field | Description |
 |---:|---|
 | [approval group]{.smallcaps}  | Select the roles, stakeholders, or user fields responsible for approval. |
-| [threshold]{.smallcaps} | Percentage of approvers required for approval. |
+| [fields to review]{.smallcaps} (optional) | Select the model inventory fields shown to approvers for read-only review. |
 | Approval Message | When your workflow reaches this {{< fa users >}} Approval step, the selected [approval group]{.smallcaps}  will shown this message.^[Enter in a **[title]{.smallcaps}** and a **[message]{.smallcaps}** to display.] |
 : **{{< fa users >}} Approval** step configuration {.hover tbl-colwidths="[35,65]"}
 
