Update: Approval Step example

--- a/site/guide/model-workflows/workflow-configuration-examples.qmd
+++ b/site/guide/model-workflows/workflow-configuration-examples.qmd
@@ -115,11 +115,11 @@ In this example, the user is presented with an action button labelled **{{< fa a
 
 #### {{< fa users >}} Approval
 
-In this example, the [peer reviewers]{.smallcaps} model stakeholders[^14] assigned to the model are presented with an approval message:
+In this example, the [peer reviewers]{.smallcaps} model stakeholders[^14] assigned to the model are presented with an approval message and a `Data Sources` field to review:
 
 :::: {.flex .flex-wrap .justify-around}
 
-::: {.w-60-ns}
+::: {.w-50-ns}
 
 ![Example {{< fa users >}} Approval configuration modal](configure_approval.png){fig-alt="A screenshot showing an example Approval configuration modal" .screenshot group="approval"}
 :::
