Add Tidy Layout callout

--- a/site/guide/model-workflows/configure-model-workflows.qmd
+++ b/site/guide/model-workflows/configure-model-workflows.qmd
@@ -38,6 +38,10 @@ To set up a new custom workflow, you'll need to complete these three steps in se
 
 {{< include /guide/model-workflows/_link-workflow-together.qmd >}}
 
+::: {.callout title="Workflow steps relationship unclear on your canvas?"}
+Click **Tidy Layout** at any time for a linear view of your workflow.
+:::
+
 ## Edit existing workflows
 
 You can edit a workflow in two ways:
