Draft: Calculation Finding Fields in training

--- a/site/training/administrator-fundamentals/administrator-fundamentals-register.qmd
+++ b/site/training/administrator-fundamentals/administrator-fundamentals-register.qmd
@@ -23,7 +23,7 @@ listing:
     - path: customizing-your-model-inventory.html
       title: "Customizing Your Model Inventory"
       subtitle: "Module 2"
-      description: "{{< fa check >}} Configure model inventory fields <br> {{< fa check >}} Customize document templates <br> {{< fa check >}} Configure reusable blocks"
+      description: "{{< fa check >}} Configure model inventory & finding fields <br> {{< fa check >}} Customize document templates <br> {{< fa check >}} Configure reusable blocks"
       reading-time: "20"
       author: "{{< var vm.product >}}"
     - path: using-validmind-for-model-risk-management.html
