--- a/site/guide/model-validation/manage-model-finding-fields.qmd
+++ b/site/guide/model-validation/manage-model-finding-fields.qmd
@@ -3,7 +3,7 @@ title: "Manage model finding fields"
 date: last-modified
 ---
 
-Manage the fields that appear on all finding types logged on your models. Choose from an array of field types with different properties and use cases.
+{{< include /guide/model-validation/_model-finding-fields.qmd >}}
 
 ::: {.attn}
 
@@ -71,40 +71,14 @@ For example, if you first search by keyword for `Regression` under **Title** wit
 
     Here you can edit existing finding fields, or add a new one:
 
-::: {.panel-tabset}
-
-#### Add finding fields
-
-To add a new finding field, click **{{< fa plus >}} Add Field**:
-
-a. Finding fields require a [type]{.smallcaps},[^8] a [name]{.smallcaps}, a [description]{.smallcaps} and a [finding type]{.smallcaps}.[^9]
-
-    - (Optional) You can also choose to indicate that a field is **[required when creating findings]{.smallcaps}**.
-    - (Optional) You can also assign a field to a group.[^10]
-    - Assign **[write permissions]{.smallcaps}** to allow granular access to editing this field gated by model stakeholder types.[^11]
-
-a. When you are satisfied with the setup of your finding field, click **Save**.
-
-#### Edit finding fields
-
-To edit an existing finding field:
-
-a. Hover over the finding field you would like to edit.
-
-    Expand any inventory field group to see more fields.[^12]
-
-a. When the **{{< fa ellipsis-vertical >}}** appears under the Actions column, select **{{< fa pencil >}} Edit Details**.
-
-a. Make your desired changes to your finding field, then click **Save**.
-
-:::
+{{< include /guide/model-validation/_add-edit-finding-fields.qmd >}}
 
 #### Finding field types
 
 {{< include /guide/model-inventory/_field-types.qmd >}}
 
 ::: {.callout}
-## Use finding types[^13] in your formulas to create dynamic calculations.
+## Use finding types[^8] in your formulas to create dynamic calculations.
 
 Use simple dot notation to include finding types:
 
@@ -180,7 +154,7 @@ To group finding fields, first create a finding field group:
 
 4. Click **Create Group** to add the new group.
 
-5. Assign the desired fields to the group.[^14]
+5. Assign the desired fields to the group.[^9]
 
 ## Delete finding fields
 
@@ -215,27 +189,6 @@ To group finding fields, first create a finding field group:
 
 [^7]: [Manage model stakeholder types](/guide/configuration/manage-model-stakeholder-types.qmd)
 
-[^8]: [Finding field types](#finding-field-types)
+[^8]: [Manage finding types](manage-finding-types.qmd)
 
-[^9]: [Manage finding types](manage-finding-types.qmd)
-
-[^10]: [Add finding field groups](#add-finding-field-groups)
-
-[^11]:
-
-    ::: {.callout title="Leave this field blank to leave permissions as default."}
-    - By default, only the <br>[{{< fa hand >}} Customer Admin]{.bubble} role has write access.
-    - All other users will have read-only access unless specified under the **[write permissions]{.smallcaps}** as a model stakeholder type.
-
-    ::: {.tc}
-    [Manage model stakeholder types](/guide/configuration/manage-model-stakeholder-types.qmd)
-
-    :::
-
-    :::
-
-[^12]: [Add finding field groups](#add-finding-field-groups)
-
-[^13]: [Manage finding types](manage-finding-types.qmd)
-
-[^14]: [Add or edit finding fields](#add-or-edit-finding-fields)
+[^9]: [Add or edit finding fields](#add-or-edit-finding-fields)
