--- a/site/training/program/learning-paths.qmd
+++ b/site/training/program/learning-paths.qmd
@@ -168,7 +168,7 @@ Learn how to use {{< var vm.product >}} as an **administrator** to onboard your 
 ::: {.w-50-ns}
 #### <sup>Module 2</sup><br> Customizing Your Model Inventory
 
-- Configure model inventory fields
+- Configure model inventory & finding fields
 - Customize document templates
 - Configure reusable blocks
 
