--- a/site/guide/model-validation/_add-edit-finding-fields.qmd
+++ b/site/guide/model-validation/_add-edit-finding-fields.qmd
@@ -6,11 +6,11 @@
 
 To add a new finding field, click **{{< fa plus >}} Add Field**:
 
-a. Finding fields require a [type]{.smallcaps},^[[Finding field types](/guide/model-validation/manage-model-finding-fields.qmd#finding-field-types)] a [name]{.smallcaps}, a [description]{.smallcaps} and a [finding type]{.smallcaps}.^[[Manage finding types](/guide/model-validation/manage-model-finding-fields.qmdmanage-finding-types.qmd)]
+a. Finding fields require a [type]{.smallcaps},^[[Finding field types](/guide/model-validation/manage-model-finding-fields.qmd#finding-field-types)] a [name]{.smallcaps}, a [description]{.smallcaps} and a [finding type]{.smallcaps}.^[[Manage finding types](/guide/model-validation/manage-finding-types.qmd)]
 
     - (Optional) You can also choose to indicate that a field is **[required when creating findings]{.smallcaps}**.
     - (Optional) You can also assign a field to a group.^[[Add finding field groups](/guide/model-validation/manage-model-finding-fields.qmd#add-finding-field-groups)]
-    - Assign **[write permissions]{.smallcaps}** to allow granular access to editing this field gated by model stakeholder types.^[edit-finding-fields]
+    - Assign **[write permissions]{.smallcaps}** to allow granular access to editing this field gated by model stakeholder types.[^edit-finding-fields]
 
 a. When you are satisfied with the setup of your finding field, click **Save**.
 
