--- a/site/training/administrator-fundamentals/customizing-your-model-inventory.qmd
+++ b/site/training/administrator-fundamentals/customizing-your-model-inventory.qmd
@@ -170,7 +170,7 @@ Manage model inventory fields
 :::
 
 1. Click **{{< fa plus >}} Add Field**.
-2. Select the field [type]{.smallcaps}, enter a [name]{.smallcaps}, and a [description]{.smallcaps}.
+2. Select the field **[type]{.smallcaps}**, enter a **[name]{.smallcaps}**, and a **[description]{.smallcaps}**.
 3. Click **Save** to add your field.
 
 When you're done, click [{{< fa chevron-right >}}]() to continue.
@@ -300,30 +300,17 @@ Manage model finding fields
 
 ::::
 
-## {background-iframe="https://app.prod.validmind.ai/settings/inventory-model-custom-fields" background-interactive="true" data-preload="yes"}
+## {background-iframe="https://app.prod.validmind.ai/settings/finding-custom-fields" background-interactive="true" data-preload="yes"}
 
 :::: {.slideover--l .three-quarters .auto-collapse-10}
 ::: {.tc}
-**Add an inventory field**
+**Add a finding field**
 :::
 
 1. Click **{{< fa plus >}} Add Field**.
-2. Select the field [type]{.smallcaps}, enter a [name]{.smallcaps}, and a [description]{.smallcaps}.
-3. Click **Save** to add your field.
-
-When you're done, click [{{< fa chevron-right >}}]() to continue.
-
-::::
-
-## {background-iframe="https://app.prod.validmind.ai/model-inventory" background-interactive="true" data-preload="yes"}
-
-:::: {.slideover--b .three-quarters .auto-collapse-10}
-::: {.tc}
-**View model inventory field**
-:::
-
-1. Select the name of your model you registered earlier to open up the model details page.
-2. On the landing page of your model, confirm that the new field that you added is present.
+2. Select the field **[type]{.smallcaps}**, enter a **[name]{.smallcaps}**, and a **[description]{.smallcaps}**.
+3. Select the **[finding types]{.smallcaps}** this field is available on.
+4. Click **Save** to add your field.
 
 When you're done, click [{{< fa chevron-right >}}]() to continue.
 
