--- a/site/training/administrator-fundamentals/customizing-your-model-inventory.qmd
+++ b/site/training/administrator-fundamentals/customizing-your-model-inventory.qmd
@@ -170,7 +170,7 @@ Manage model inventory fields
 :::
 
 1. Click **{{< fa plus >}} Add Field**.
-2. Select the field **[type]{.smallcaps}**, enter a **[name]{.smallcaps}**, and a **[description]{.smallcaps}**.
+2. Select the field **[type]{.smallcaps}** and enter a **[name]{.smallcaps}**.
 3. Click **Save** to add your field.
 
 When you're done, click [{{< fa chevron-right >}}]() to continue.
@@ -273,7 +273,7 @@ Manage model finding fields
 [Learn more ...](/guide/model-validation/manage-model-finding-fields.qmd){.button target="_blank"}
 :::
 
-<br>Try it **live** on the next pages. {{< fa hand-point-right >}}
+<br>Try it **live** on the next page. {{< fa hand-point-right >}}
 :::
 
 ::: {.column width="70%" .bl .pl4 .f3}
@@ -308,7 +308,7 @@ Manage model finding fields
 :::
 
 1. Click **{{< fa plus >}} Add Field**.
-2. Select the field **[type]{.smallcaps}**, enter a **[name]{.smallcaps}**, and a **[description]{.smallcaps}**.
+2. Select the field **[type]{.smallcaps}** and enter a **[name]{.smallcaps}**.
 3. Select the **[finding types]{.smallcaps}** this field is available on.
 4. Click **Save** to add your field.
 
