--- a/site/guide/model-validation/_add-edit-finding-fields.qmd
+++ b/site/guide/model-validation/_add-edit-finding-fields.qmd
@@ -6,8 +6,9 @@
 
 To add a new finding field, click **{{< fa plus >}} Add Field**:
 
-a. Finding fields require a [type]{.smallcaps},^[[Finding field types](/guide/model-validation/manage-model-finding-fields.qmd#finding-field-types)] a [name]{.smallcaps}, a [description]{.smallcaps} and a [finding type]{.smallcaps}.^[[Manage finding types](/guide/model-validation/manage-finding-types.qmd)]
+a. Finding fields require a **[type]{.smallcaps}**,^[[Finding field types](/guide/model-validation/manage-model-finding-fields.qmd#finding-field-types)] a **[name]{.smallcaps}**, and a **[finding type]{.smallcaps}**.^[[Manage finding types](/guide/model-validation/manage-finding-types.qmd)]
 
+    - (Optional) Enter a **[description]{.smallcaps}** to indicate the purpose of the field.
     - (Optional) You can also choose to indicate that a field is **[required when creating findings]{.smallcaps}**.
     - (Optional) You can also assign a field to a group.^[[Add finding field groups](/guide/model-validation/manage-model-finding-fields.qmd#add-finding-field-groups)]
     - Assign **[write permissions]{.smallcaps}** to allow granular access to editing this field gated by model stakeholder types.[^edit-finding-fields]
@@ -54,8 +55,9 @@ a. Make your desired changes to your finding field, then click **Save**.
     - Click **{{< fa plus >}} Add Field** to add a new field.
     - Hover over a field and select **{{< fa pencil >}} Edit** under the Actions column to edit that field.
 
-1. Finding fields require a [type]{.smallcaps}, a [name]{.smallcaps}, a [description]{.smallcaps} and a [finding type]{.smallcaps}.
+1. Finding fields require a **[type]{.smallcaps}**, a **[name]{.smallcaps}**, and a **[finding type]{.smallcaps}**.
 
+    - (Optional) Enter a **[description]{.smallcaps}** to indicate the purpose of the field.
     - (Optional) You can also choose to indicate that a field is **[required when creating findings]{.smallcaps}**.
     - (Optional) You can also assign a field to a group.
     - Assign **[write permissions]{.smallcaps}** to allow granular access to editing this field gated by model stakeholder types.
