--- a/site/guide/model-inventory/_add-edit-inventory-fields.qmd
+++ b/site/guide/model-inventory/_add-edit-inventory-fields.qmd
@@ -6,7 +6,7 @@
 
 To add a new inventory field, click **{{< fa plus >}} Add Field**:
 
-a. Inventory fields require a **[type]{.smallcaps}**,^[[Inventory field types](/guide/model-inventory/manage-model-inventory-fields.qmd#inventory-field-types)] and a **[name]{.smallcaps}**.
+a. Inventory fields require a **[type]{.smallcaps}**^[[Inventory field types](/guide/model-inventory/manage-model-inventory-fields.qmd#inventory-field-types)] and a **[name]{.smallcaps}**.
 
     - (Optional) Enter a **[description]{.smallcaps}** to indicate the purpose of the field.
     - (Optional) You can also choose to indicate that a field is **[required when creating models]{.smallcaps}**.
