--- a/site/releases/all-releases.qmd
+++ b/site/releases/all-releases.qmd
@@ -8,9 +8,9 @@ listing:
     sort: false
     fields: [title, date, subtitle]
     contents:
-        - ../releases/validmind-library-releases.qmd
         - ../releases/validmind-platform-releases.qmd
         - ../releases/documentation-releases.qmd
+        - ../releases/validmind-library-releases.qmd
   - id: releases
     type: table
     page-size: 20
@@ -29,6 +29,22 @@ listing:
         categories: ["breaking changes", "deprecations", "releases by year"]
     contents:
         - ../releases/2025/**/*.qmd
+  - id: feature-highlights
+    type: table
+    page-size: 10
+    table-hover: true
+    include:
+      categories: highlight
+    sort: "date desc"
+    max-description-length: 300
+    categories: false
+    sort-ui: false
+    filter-ui: false
+    fields: [date, title]
+    contents:
+      - ../releases/frontend/**/pr*.qmd
+      - ../releases/documentation/**/pr*.qmd
+      - ../releases/validmind-library/**/pr*.qmd
 ---
 
 ## Current releases
@@ -36,7 +52,25 @@ listing:
 :::{#release-pages}
 :::
 
-## Previous releases
+## Latest features
+
+:::{#feature-highlights}
+:::
+
+[View all feature highlights](/releases/highlights.qmd){.button}
+
+::: {.pt4}
+::: {.callout-important collapse="true" appearance="minimal"}
+
+## Older releases
+
+We introduced a new release notes format in April 2025 with better highlights and filtering:
+
+- Release notes up to version `25.03` are in this section. 
+- Release notes from version `25.04` and later are under "Current releases".
 
 :::{#releases}
+:::
+
+:::
 :::
