--- a/site/releases/validmind-library-releases.qmd
+++ b/site/releases/validmind-library-releases.qmd
@@ -1,10 +1,11 @@
 ---
 title: "{{< var validmind.developer >}} releases"
-subtitle: "Latest: `v2.9.3`"
-date: "September 3, 2025"
+subtitle: "Latest: `v2.9.5`"
+date: "October 7, 2025"
 listing:
   contents: ../releases/validmind-library/**/pr-*.qmd
   fields: [date, title, categories, description]
+  max-description-length: 500
   sort: "date desc"
   type: default
   categories: true
